--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rollup-plugin-buble": "^0.15.0"
   },
   "scripts": {
-    "test": "standard",
+    "test": "standard src/*.js && standard --global Oscilloscope examples/*.js",
     "build": "rollup -c",
     "prepublish": "npm run build"
   },
