--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "module": "dist/oscilloscope.es.js",
   "dependencies": {},
   "devDependencies": {
-    "bili": "^3.1.2",
-    "rimraf": "^2.6.2",
-    "standard": "*"
+    "bili": "^3.4.2",
+    "microbundle": "^0.12.0",
+    "rimraf": "^3.0.2",
+    "standard": "^14.3.4"
   },
   "scripts": {
     "test": "standard src/*.js && standard --global Oscilloscope examples/*.js",
     "clean": "rimraf dist/*",
     "build": "npm run clean && bili --js buble --format es,umd,umd-min --moduleName Oscilloscope",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
