--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "unpkg": "dist/oscilloscope.umd.js",
   "dependencies": {},
   "devDependencies": {
-    "microbundle": "^0.12.3",
+    "microbundle": "^0.12.4",
     "rimraf": "^3.0.2",
-    "standard": "*"
+    "standard": "^16.0.2"
   },
   "scripts": {
     "test": "standard src/*.js && standard --global Oscilloscope examples/*.js",
